<resources>
    <string name="app_name" translatable="false">Spot A Shot</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8094643563031669/9836509237</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-8094643563031669/2313242434</string>
    <string name="help_versie" translatable="false">1.0</string>
    <string name="help_scherm" translatable="false">0</string>
    <string name="website_url">http://www.spotashot.nl</string>
    <string name="website_paginas">http://www.spotashot.nl/paginas/app</string>
    <string name="ja">YES</string>
    <string name="nee">NO</string>
    <string name="ok">OK</string>
    <string name="sluiten">Close</string>
    <string name="kleur_1">Blue</string>
    <string name="kleur_2">Green</string>
    <string name="kleur_3">Orange</string>
    <string name="kleur_4">Purple</string>
    <string name="kleur_5">Red</string>
    <string name="onderwerp_1">Indoors</string>
    <string name="onderwerp_2">Outdoors</string>
    <string name="onderwerp_3">Nature</string>
    <string name="onderwerp_4">Urban</string>
    <string name="onderwerp_5">Random</string>
    <string name="onderwerpen">subjects</string>
    <string name="een_ogenblik_geduld">One moment please..</string>
    <string name="tip_1">Do you want to cancel or delete a game?\n\nLong press a game for options.</string>
    <string name="tip_2">Do you want to glance all the pictures that are made?\n\nSwipe from left to right under the playfields.</string>
    <string name="tip_3">Do you want to zoom while taking a picture?\n\nSwipe to the left or right in the camerascreen.</string>
    <string name="tip_5">Is there a evaluation icon in your players bar? Then you need to review one or more photos.</string>
    <string name="tip_6">Are you playing against a international player? Then you can play in your own language.</string>
    <string name="tip_7">Tap the coin at the top left side of the screen to buy new themes and check your progress!</string>
    <string name="popup_0">Welcome back!</string>
    <string name="popup_1">Opponent\'s turn!\n\nYou will receive a notification\nwhen it\'s your turn.</string>
    <string name="popup_2">Make 3 in a row\nand score a point.\n\nNo diagonals!\n\nFirst to reach 2 points wins!</string>
    <string name="popup_3">A player has 24 hrs to play.\nAfter 24 hrs the turn end.</string>
    <string name="popup_4">You have one action left!\n\nEach turn has 2 actions.\nTake pictures or change subjects.\n\nThe turn end after 2 actions.</string>
    <string name="popup_5">Tap this button to end your turn\nprematurely within 24 hrs,\nunregarded the number of actions.</string>
    <string name="popup_6">Photos from opponent need\nto be judged first.\n\nTap a square\nwith this symbol.</string>
    <string name="popup_7">Do you want to change a subject?\n\nTap this button.\n\nChanging a subject is 1 action!</string>
    <string name="popup_8">Collect coins and unlock\nnew themes.\n\nPlay difficult themes and collect\na higher amount of coins.</string>
    <string name="popup_9">When 3 is a row is made\nthe squares involved are no more\npart of the game.\n\nNo 3 in a row possible\nfor both players,\n9 new subjects!</string>
    <string name="popup_10">you have one action left!\n\n</string>
    <string name="popup_10_check">Don\'t show this message again</string>
    <string name="popup_11">A flashing square is a new subject.</string>
    <string name="popup_12">Second action is not possible.\nEnd your turn prematurely and continue to 9 new subjects.</string>
    <string name="popup_13">Your opponent has not played in the last 2 turns.\nYou have won!</string>
    <string name="popup_14">You have not played in the last 2 turns.\nYou have lost!</string>
    <string name="foutmelding_internet">No network connection</string>
    <string name="foutmelding_server_titel">Server error</string>
    <string name="foutmelding_server_tekst">Please try again later.</string>
    <string name="notificatie_1_titel">New game</string>
    <string name="notificatie_1_tekst">[naam] has started a new game.</string>
    <string name="notificatie_2_titel">Game started</string>
    <string name="notificatie_2_tekst">The game with [naam] has started.</string>
    <string name="notificatie_3_titel">New topics available</string>
    <string name="notificatie_3_tekst">Time to take pictures.</string>
    <string name="notificatie_4_titel">Game with [naam]</string>
    <string name="notificatie_4_tekst">Your turn.</string>
    <string name="notificatie_5_titel">Your picture has been rejected</string>
    <string name="notificatie_5_tekst">Please try again.</string>
    <string name="notificatie_6_titel">Turn is expired</string>
    <string name="notificatie_6_tekst">Your turn has expired.\n [aantal] times and you\'ve lost.</string>
    <string name="notificatie_7_titel">Turn is expired</string>
    <string name="notificatie_7_tekst">The turn of [naam] has expired.\nYou\'re next.</string>
    <string name="notificatie_8_titel">New message</string>
    <string name="notificatie_8_tekst">You have received a message from [naam]</string>
    <string name="notificatie_9_titel">Game is stopping</string>
    <string name="notificatie_9_tekst">The game with [naam] is going to stop in 1 hour!\nBe fast and play on!</string>
    <string name="welkom_1">Create account</string>
    <string name="welkom_2">Login</string>
    <string name="registreren_1">Create account</string>
    <string name="registreren_2">Username</string>
    <string name="registreren_3">Password</string>
    <string name="registreren_4">Repeat password</string>
    <string name="registreren_5">E-mail</string>
    <string name="registreren_6">I agree to the\u00A0</string>
    <string name="registreren_7">conditions</string>
    <string name="registreren_8">Confirm</string>
    <string name="registreren_foutmelding_1_titel">No username</string>
    <string name="registreren_foutmelding_1_tekst">You didn\'t provide a username.\nPlease try again.</string>
    <string name="registreren_foutmelding_2_titel">No password</string>
    <string name="registreren_foutmelding_2_tekst">You didn\'t provide a password.\nPlease try again.</string>
    <string name="registreren_foutmelding_3_titel">Repeat password</string>
    <string name="registreren_foutmelding_3_tekst">You didn\'t repeat your password.\nPlease try again.</string>
    <string name="registreren_foutmelding_4_titel">Wrong passwords</string>
    <string name="registreren_foutmelding_4_tekst">Your passwords do not match.\nPlease try again.</string>
    <string name="registreren_foutmelding_5_titel">No e-mail address</string>
    <string name="registreren_foutmelding_5_tekst">You didn\'t provide an e-mail address.\nPlease try again.</string>
    <string name="registreren_foutmelding_6_titel">Terms</string>
    <string name="registreren_foutmelding_6_tekst">You didn\'t accept the terms.\nPlease try again.</string>
    <string name="registreren_melding_1">Registering</string>
    <string name="registreren_foutmelding_7_titel">Username exists</string>
    <string name="registreren_foutmelding_7_tekst">This username already exists.\nPlease try again.</string>
    <string name="registreren_foutmelding_8_titel">E-mail address exists</string>
    <string name="registreren_foutmelding_8_tekst">This email address already exists.\nPlease try again.</string>
    <string name="voorwaarden_1">Terms and Conditions</string>
    <string name="inloggen_1">Login</string>
    <string name="inloggen_2">Username</string>
    <string name="inloggen_3">Password</string>
    <string name="inloggen_4">Forgot password</string>
    <string name="inloggen_5">Confirm</string>
    <string name="inloggen_melding_1">Enabling notifications</string>
    <string name="inloggen_foutmelding_1_titel">No username</string>
    <string name="inloggen_foutmelding_1_tekst">You didn\'t provide a username.\nPlease try again.</string>
    <string name="inloggen_foutmelding_2_titel">No password</string>
    <string name="inloggen_foutmelding_2_tekst">You didn\'t provide a password.\nPlease try again.</string>
    <string name="inloggen_melding_2">Logging in</string>
    <string name="inloggen_foutmelding_3_titel">Wrong username</string>
    <string name="inloggen_foutmelding_3_tekst">You provided a wrong username.\nPlease try again.</string>
    <string name="inloggen_foutmelding_4_titel">Wrong password</string>
    <string name="inloggen_foutmelding_4_tekst">You provided a wrong password.\nPlease try again.</string>
    <string name="inloggen_melding_3">Connecting</string>
    <string name="inloggen_melding_4_titel">E-mail</string>
    <string name="inloggen_melding_4_tekst_a">You have received an e-mail at</string>
    <string name="inloggen_melding_4_tekst_b">with instructions to reset your password.</string>
    <string name="home_1">New game</string>
    <string name="home_2">My games</string>
    <string name="home_3">My profile</string>
    <string name="home_4">Rules</string>
    <string name="home_5">Last played game</string>
    <string name="home_6"> </string>
    <string name="home_7">Themes</string>
    <string name="home_8">Buying themes with money is not possible yet..</string>
    <string name="home_9">Do you want to buy this theme for</string>
    <string name="home_10">coins?</string>
    <string name="nieuw_spel_1">New game</string>
    <string name="nieuw_spel_2">Points to win</string>
    <string name="nieuw_spel_3">Choose color</string>
    <string name="nieuw_spel_4">Choose theme</string>
    <string name="nieuw_spel_5">Choose game mode</string>
    <string name="nieuw_spel_6">Opponent</string>
    <string name="nieuw_spel_7">Username or email</string>
    <string name="nieuw_spel_8">Random player</string>
    <string name="nieuw_spel_9">Send invitation</string>
    <string name="nieuw_spel_10">Only from the same country</string>
    <string name="nieuw_spel_opties_1">Points to win</string>
    <string name="nieuw_spel_opties_2">Play color</string>
    <string name="nieuw_spel_opties_3">Theme</string>
    <string name="nieuw_spel_opties_4">Friends</string>
    <string name="nieuw_spel_opties_5">Game mode</string>
    <string name="nieuw_spel_speltype_1">Slowly, take photographs in turns</string>
    <string name="nieuw_spel_speltype_2">Quickly, take photographs without limits</string>
    <string name="nieuw_spel_speltype_3">Slowly</string>
    <string name="nieuw_spel_speltype_4">Quick</string>
    <string name="nieuw_spel_melding_1">Searching for player</string>
    <string name="nieuw_spel_melding_2"> is added to your friend list!</string>
    <string name="nieuw_spel_foutmelding_1_titel">Need some friends?</string>
    <string name="nieuw_spel_foutmelding_1_tekst">You can\'t play against yourself.\nPlease try again.</string>
    <string name="nieuw_spel_foutmelding_2_titel">No username or email address</string>
    <string name="profiel_tegenstander_1">Add to friend list</string>
    <string name="profiel_tegenstander_2">Block</string>
    <string name="profiel_tegenstander_3">Coins:</string>
    <string name="profiel_tegenstander_4">Photos:</string>
    <string name="profiel_tegenstander_5">Games won:</string>
    <string name="profiel_tegenstander_6">Games lost:</string>
    <string name="spelregels_1">Rules</string>
    <string name="spelregels_2">●○○○○○○○○○○○</string>
    <string name="instellingen_1">Notifications</string>
    <string name="instellingen_2">Invitations</string>
    <string name="instellingen_3">Start of game</string>
    <string name="instellingen_4">New topics</string>
    <string name="instellingen_5">Change turn</string>
    <string name="instellingen_6">Chat messages</string>
    <string name="instellingen_7">Notification sound</string>
    <string name="instellingen_8">More options</string>
</resources>