<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/textview_boven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:background="@drawable/effect_rood"
        android:textSize="20sp"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:layout_below="@+id/textview_boven"
        android:src="@drawable/instellingen"
        android:transitionName="Instellingen"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_boven"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:drawableRight="@drawable/notificaties"
                android:background="@drawable/streep"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/instellingen_1" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/instellingen_2"
                android:tag="1"
                android:onClick="notificaties" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/instellingen_3"
                android:tag="2"
                android:onClick="notificaties"/>

            <Switch
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/instellingen_4"
                android:tag="3"
                android:onClick="notificaties"/>

            <Switch
                android:id="@+id/switch4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/instellingen_5"
                android:tag="4"
                android:onClick="notificaties"/>

            <Switch
                android:id="@+id/switch5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/instellingen_6"
                android:tag="5"
                android:onClick="notificaties"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:button="@null"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/instellingen_7"
                android:onClick="geluid"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:textColor="#970a0e"
                android:background="@drawable/streep"
                android:drawableRight="@drawable/cancel_rood"
                android:text="@string/instellingen_8"
                android:clickable="true"
                android:onClick="instellingen_2"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
